--- a/src/Yams/Yams.scss
+++ b/src/Yams/Yams.scss
@@ -1,19 +1,30 @@
 .Yams {
   .header {
-    color: blue;
+    text-align: center;
   }
 }
 
 .Question {
+  h3 {
+    font-weight: 500;
+  }
+
   .row {
     display: flex;
-  }
-  button {
-    flex-grow: 1;
-    background: none;
-    font-size: 24px;
-    padding: 12px 24px;
-    border: 2px solid rgba(0, 0, 0, 0.3);
-    border-radius: 12px;
+
+    button {
+      flex-grow: 1;
+      background: none;
+      font-size: 24px;
+      padding: 12px 24px;
+      margin: 0 8px;
+      border: 2px solid rgba(0, 0, 0, 0.3);
+      border-radius: 12px;
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.05);
+        cursor: pointer;
+      }
+    }
   }
 }
