--- a/src/Yams/Yams.scss
+++ b/src/Yams/Yams.scss
@@ -22,6 +22,7 @@
     font-family: 'Londrina Solid', sans-serif;
     font-size: 24px;
     color: rgb(247, 145, 116);
+    margin-bottom: 32px;
 
     * {
       margin: 0;
@@ -32,9 +33,17 @@
     }
   }
 
+  .yam-image {
+    display: block;
+    margin: auto;
+    width: 50%;
+    margin-bottom: 32px;
+  }
+
   .results {
     margin-bottom: 64px;
   }
+
 }
 
 .Question {
