--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,32 @@
+@media (prefers-color-scheme: light) {
+  body {
+    --background-color: white;
+  }
+
+  html.dark body {
+    --background-color: rgb(13, 17, 23);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  body {
+    --background-color: rgb(13, 17, 23);
+  }
+
+  html.light body {
+    --background-color: white;
+  }
+}
 body {
+  background-color: var(--background-color);
   margin: 0 auto;
   width: 80vw;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+/*# sourceMappingURL=index.css.map */
