--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,8 @@
 
 body {
   background-color: var(--background-color);
-  margin: 0 auto;
+  color: var(--primary-color);
+  margin: 72px auto;
   width: 80vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
