--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-
+ul {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+}
+ul a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
 
 /*# sourceMappingURL=App.css.map */
