--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,37 @@
 @media (prefers-color-scheme: light) {
   body {
     --background-color: white;
+    --primary-color: black;
+    --secondary-color: rgba(0, 0, 0, 0.3);
+    --tertiary-color: rgba(0, 0, 0, 0.05);
   }
 
   html.dark body {
     --background-color: rgb(13, 17, 23);
+    --primary-color: rgba(255, 255, 255, 0.7);
+    --secondary-color: rgba(255, 255, 255, 0.3);
+    --tertiary-color: rgba(255, 255, 255, 0.05);
   }
 }
 @media (prefers-color-scheme: dark) {
   body {
     --background-color: rgb(13, 17, 23);
+    --primary-color: rgba(255, 255, 255, 0.7);
+    --secondary-color: rgba(255, 255, 255, 0.3);
+    --tertiary-color: rgba(255, 255, 255, 0.05);
   }
 
   html.light body {
     --background-color: white;
+    --primary-color: black;
+    --secondary-color: rgba(0, 0, 0, 0.3);
+    --tertiary-color: rgba(0, 0, 0, 0.05);
   }
 }
 body {
   background-color: var(--background-color);
-  margin: 0 auto;
+  color: var(--primary-color);
+  margin: 72px auto;
   width: 80vw;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
