--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,65 @@
-ul {
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-}
-ul a {
-  text-decoration: none;
+@import url("https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300&display=swap");
+.App button {
+  font-size: 24px;
+  padding: 12px 24px;
+  margin: 0 8px;
+  background: none;
+  border: 2px solid var(--secondary-color);
   color: var(--primary-color);
+  border-radius: 12px;
+}
+.App button:hover {
+  background: var(--tertiary-color);
+  cursor: pointer;
+}
+.App .header, .App .results {
+  text-align: center;
+}
+.App .header {
+  font-family: "Londrina Solid", sans-serif;
+  font-size: 24px;
+  color: #f79174;
+  margin-bottom: 64px;
+}
+.App .header * {
+  margin: 0;
+}
+.App .header h1 {
+  font-size: 72px;
+}
+.App .yam-image {
+  display: block;
+  margin: auto;
+  width: 50%;
+  margin-bottom: 64px;
+}
+.App .results {
+  margin-bottom: 64px;
+}
+
+.Question {
+  margin-bottom: 64px;
+}
+.Question h3 {
+  font-weight: 500;
+}
+.Question .row {
+  display: flex;
+}
+.Question .row button {
+  flex-grow: 1;
+}
+.Question .row button.selected {
+  border-color: #f79174;
+  background: rgba(247, 145, 116, 0.1);
+}
+.Question .row button.correct {
+  border-color: #6bd962;
+  background: rgba(107, 217, 98, 0.1);
+}
+.Question .row button.incorrect {
+  border-color: #e65d51;
+  background: rgba(230, 93, 81, 0.1);
 }
 
 /*# sourceMappingURL=App.css.map */
