--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @use 'theme';
+@import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300&display=swap');
 
 body {
   background-color: var(--background-color);
