--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,20 @@
 .App {
-  // --primary-color, --secondary-color, and --tertiary-color
-  // are declared in _theme.scss.
+  // --foreground-color-primary, --foreground-color-secondary, and --foreground-color-tertiary
+  // are all declared in _theme.scss.
   button {
     font-size: 24px;
     padding: 12px 24px;
     margin: 0 8px;
     background: none;
-    border: 2px solid var(--secondary-color);
-    color: var(--primary-color);
+    border: 2px solid var(--foreground-color-secondary);
+    color: var(--foreground-color-primary);
     border-radius: 12px;
 
     // The "&" symbol is a special Sass construct that refers to
     // the parent item. So in this case &:hover means the same
-    // thing as button:hover.
+    // thing as button:hover (but makes the intent more clear).
     &:hover {
-      background: var(--tertiary-color);
+      background: var(--foreground-color-tertiary);
       cursor: pointer;
     }
   }
@@ -26,7 +26,7 @@
   .header {
     font-family: 'Londrina Solid', sans-serif;
     font-size: 24px;
-    color: rgb(247, 145, 116);
+    color: var(--yam-color-primary);
     margin-bottom: 64px;
 
     * {
