--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 
 body {
   background-color: var(--background-color);
-  color: var(--primary-color);
+  color: var(--foreground-color-primary);
   margin: 72px auto;
   width: 80vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
