--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,8 @@
     button {
       flex-grow: 1;
 
+      // These variables are also defined in _theme.scss,
+      // but are the same dark mode or not.
       &.selected {
         border-color: var(--yam-color-primary);
         background: var(--yam-color-secondary);
