--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+// The @use keyword specifies that we want to add the _theme partial file
+// to the top of this file.
 @use 'theme';
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300&display=swap');
 
