--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,18 @@
 .App {
-  // --foreground-color-primary, --foreground-color-secondary, and --foreground-color-tertiary
-  // are all declared in _theme.scss.
   button {
     font-size: 24px;
     padding: 12px 24px;
     margin: 0 8px;
     background: none;
-    border: 2px solid var(--foreground-color-secondary);
-    color: var(--foreground-color-primary);
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    color: rgb(0, 0, 0);
     border-radius: 12px;
 
     // The "&" symbol is a special Sass construct that refers to
     // the parent item. So in this case &:hover means the same
     // thing as button:hover (but makes the intent more clear).
     &:hover {
-      background: var(--foreground-color-tertiary);
+      background: rgba(0, 0, 0, 0.05);
       cursor: pointer;
     }
   }
@@ -26,7 +24,7 @@
   .header {
     font-family: 'Londrina Solid', sans-serif;
     font-size: 24px;
-    color: var(--yam-color-primary);
+    color: rgb(247, 145, 116);
     margin-bottom: 64px;
 
     * {
@@ -65,21 +63,19 @@
     button {
       flex-grow: 1;
 
-      // These variables are also defined in _theme.scss,
-      // but are the same dark mode or not.
       &.selected {
-        border-color: var(--yam-color-primary);
-        background: var(--yam-color-secondary);
+        border-color: rgb(247, 145, 116);
+        background: rgba(247, 145, 116, 0.1);
       }
 
       &.correct {
-        border-color: var(--correct-color-primary);
-        background: var(--correct-color-secondary);
+        border-color: rgb(107, 217, 98);
+        background: rgba(107, 217, 98, 0.1);
       }
 
       &.incorrect {
-        border-color: var(--incorrect-color-primary);
-        background: var(--incorrect-color-secondary);
+        border-color: rgb(230, 93, 81);
+        background: rgba(230, 93, 81, 0.1);
       }
     }
   }
