--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
+@use 'theme';
 @import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300&display=swap');
 
 body {
-  background-color: white;
-  color: rgb(0, 0, 0);
+  background-color: var(--background-color);
+  color: var(--foreground-color-primary);
   margin: 72px auto;
   width: 80vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
